# concurrency-benchmark

./: .gitignore  README.md  Utils.hs  aggregate-results.sh  blacklist.txt  generate-inputs.sh  run-all.sh  summary-charts-template.html
chameneos-redux1-forkIO-MVar/: Makefile  Program.hs  run.sh
chameneos-redux1-forkIO-TMVar/: Benchmark.hs  Program.hs
chameneos-redux1-forkOn-MVar/: Benchmark.hs  Program.hs
chameneos-redux1-forkOn-TMVar/: Program.hs  run-bench.sh
dining-philosophers-forkIO-MVar/: Benchmark.hs  Program.hs  run.sh
dining-philosophers-forkIO-TMVar/: Benchmark.hs  Program.hs
dining-philosophers-forkOS-MVar/: Benchmark.hs  Program.hs
dining-philosophers-forkOS-TMVar/: Benchmark.hs  Program.hs
dining-philosophers-forkOn-MVar/: Benchmark.hs  Program.hs
dining-philosophers-forkOn-TMVar/: .gitignore  Benchmark.hs  Makefile  Program.hs
fasta7-forkIO-MVar/: Benchmark.hs  Program.hs
fasta7-forkIO-TMVar/: Benchmark.hs  Program.hs
fasta7-forkIO-TVar/: Benchmark.hs  Program.hs
fasta7-forkOS-MVar/: Benchmark.hs  Program.hs  configure.sh  run.sh
fasta7-forkOS-TMVar/: Benchmark.hs  Makefile  Program.hs
fasta7-forkOS-TVar/: Benchmark.hs  Program.hs
fasta7-forkOn-MVar/: Benchmark.hs  Program.hs
fasta7-forkOn-TMVar/: Benchmark.hs  Program.hs
fasta7-forkOn-TVar/: Benchmark.hs  Program.hs
k-nucleotide1-forkIO-MVar/: Program.hs
k-nucleotide1-forkIO-TMVar/: Program.hs
k-nucleotide1-forkOS-MVar/: Makefile  (+2 more)
tsearch-forkOn/: .gitignore  tsearch.cabal
tsearch-forkOn/src/: Benchmark.hs  Buffer.hs  Engine.hs  Logger.hs  Program.hs  Query.hs  Types.hs
warp-forkIO/: .gitignore  run-bench.sh  warp.cabal
warp-forkIO/src/: Benchmark.hs  Client.hs
(+79 files in other folders)
