name: tsearch
version: 0.0.1
synopsis: A simple concurrent desktop search engine for text files.
homepage: http://github.com/luisgabriel/tsearch

license: MIT
author: Luís Gabriel Lima
maintainer: lampih@gmail.com
category: Concurrency
build-type: Simple
cabal-version: >=1.8

executable tsearch
    build-depends: base >=4.6, directory >=1.2, filepath >=1.3, containers >=0.5,
                   array >=0.4, stm >=2.4, SafeSemaphore >=0.9, deepseq >=1.3

    main-is: Main.hs
    hs-source-dirs: src
    ghc-options: -O -Wall -threaded -rtsopts

executable benchmark
    build-depends: base >=4.6, directory >=1.2, filepath >=1.3, containers >=0.5,
                   array >=0.4, stm >=2.4, SafeSemaphore >=0.9, deepseq >=1.3, criterion >=1.1

    main-is: Benchmark.hs
    hs-source-dirs: src
    ghc-options: -O -Wall -threaded -rtsopts
